# Calculator

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Function.h  MathParser.cpp  MathParser.h  Token.h  main.cpp
plugins/: cos.cpp  log.cpp  power.cpp  sin.cpp
